--- a/girleffect/static_src/site/sass/base/_base.scss
+++ b/girleffect/static_src/site/sass/base/_base.scss
@@ -55,10 +55,6 @@ ul {
 
 p {
     margin: 0 0 1rem;
-
-    &:last-child {
-        margin-bottom: 0;
-    }
 }
 
 a {
